fixed #2337 behaviours alignements in toggle buttons

--- a/modules.less
+++ b/modules.less
@@ -888,6 +888,9 @@ a{
 		float: right;
 		margin: 10px;
 	}
+	behaviour{
+		float:left;
+	}
 }
 
 [draggable]{
